--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Menu-Son-Board</title>
+</head>
+<body>
+
+  <div class="container">
+    <div class="column1">
+      <h6><a href="./menu/efc.html"> EFC </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+    </div>
+    <div class="column2">
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+    </div>
+    <div class="column3">
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+    </div>
+    <div class="column4">
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+    </div>
+    <div class="column5">
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+      <h6><a href="#"> ? </a></h6>
+    </div>
+</body>
+</html>
