--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="column1">
       <h6><a href="./menu/efc.html"> EFC </a></h6>
-      <h6><a href="#"> ? </a></h6>
+      <h6><a href="./menu/pute.html"> PUTE </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
