--- a/menu/pute.html
+++ b/menu/pute.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>EFC</title>
+    <title>PUTE</title>
 </head>
 <body>
 
@@ -14,33 +14,33 @@
         <br>
         <h6><a href="../index.html"> Menu </a></h6>
         <a></a><hr width="" size="4">
-        <h2>EFC : les-noirs-au-tel</h2>
+        <h2>PUTE : embr-boucherie</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-les-noirs-au-tel.mp3" type="audio/mpeg">
+          <source src="../son/PUTE/PUTE-boucherie.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : adrien-intro</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-adrien-intro.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : lothaire-a-poil</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-lothaire-a-poil.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : Bande de Connard</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-bande_de_connard.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : PMU</h2>
+        <h2>EFC : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-Café du commerce.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
@@ -48,79 +48,79 @@
     </div>
     <div class="column2">
     <center>
-      <h2>EFC : KeoOffciel</h2>
-      <audio controls>
-        <source src="../son/EFC/EFC-keo-officiel.mp3" type="audio/mpeg">
-        Votre navigateur ne prend pas en charge l'élément audio.
-      </audio>
-      <a></a><hr width="" size="4">
-      <h2>EFC : casse-couille</h2>
-      <audio controls>
-        <source src="../son/EFC/EFC-casse_les_couilles.mp3" type="audio/mpeg">
-        Votre navigateur ne prend pas en charge l'élément audio.
-      </audio>
-      <a></a><hr width="" size="4">
-      <h2>EFC : Copine</h2>
-      <audio controls>
-        <source src="../son/EFC/EFC-copine.mp3" type="audio/mpeg">
-        Votre navigateur ne prend pas en charge l'élément audio.
-      </audio>
-      <a></a><hr width="" size="4">
-      <h2>EFC : gemi</h2>
-      <audio controls>
-        <source src="../son/EFC/EFC-gemi.mp3" type="audio/mpeg">
-        Votre navigateur ne prend pas en charge l'élément audio.
-      </audio>
-      <a></a><hr width="" size="4">
-      <h2>EFC : att-tout-les-jours</h2>
-      <audio controls>
-        <source src="../son/EFC/EFC-attend_tout_les_jours.mp3" type="audio/mpeg">
-        Votre navigateur ne prend pas en charge l'élément audio.
-      </audio>
-      <a></a><hr width="" size="4">
-      <h2>EFC : APPEL-BASE</h2>
-      <audio controls>
-        <source src="../son/EFC/EFC-APPEL-BASE.mp3" type="audio/mpeg">
-        Votre navigateur ne prend pas en charge l'élément audio.
-      </audio>
-      <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>EFC : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
     </center>
     </div>
     <div class="column3">
       <center>
-        <h2>EFC : espece-de-st-connard</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-espéce de st connard !.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : Frappe-bureau</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-frappe_bureau.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : attraper-ta-mere</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-j_vais_kidnaper.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : le-prochain</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-le-prochain-!.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : pedophile</h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-pedophile.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : bordel</h2>
+        <h2>EFC : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-o cest pas fini ce bordel.mp3" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
@@ -128,39 +128,39 @@
     </div>
     <div class="column4">
       <center>
-        <h2>EFC : </h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
         <h2>EFC : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
@@ -168,39 +168,39 @@
     </div>
     <div class="column5">
       <center>
-        <h2>EFC : </h2>
+        <h2>PUTE : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>PUTE : </h2>
+        <audio controls>
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
         <h2>EFC : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
-          Votre navigateur ne prend pas en charge l'élément audio.
-        </audio>
-        <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
-        <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
