--- a/menu/efc.html
+++ b/menu/efc.html
@@ -128,39 +128,39 @@
     </div>
     <div class="column4">
       <center>
-        <h2>EFC : </h2>
+        <h2>EFC : oh-adrien</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-oh_adrien_la2.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : plombier</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-plombier.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : repondeur</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-repondeur.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : ta-gueuuuule</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-ta_gueule.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : je pue</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-je-pue.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : rien au code</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-rien-au-code.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
@@ -168,21 +168,21 @@
     </div>
     <div class="column5">
       <center>
-        <h2>EFC : </h2>
+        <h2>EFC : enculer-salope</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-va te faire enculé salope.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : enculer-le-noir</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-va_te_faire_encule_le_noir.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : tas-voiture</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-yen_a_bien_dans_le_tas_qui_ont_des_voiture.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
