--- a/menu/efc.html
+++ b/menu/efc.html
@@ -44,6 +44,12 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
+        <h2>EFC : </h2>
+        <audio controls>
+          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
     </center>
     </div>
     <div class="column2">
@@ -81,6 +87,12 @@
       <h2>EFC : APPEL-BASE</h2>
       <audio controls>
         <source src="../son/EFC/EFC-APPEL-BASE.mp3" type="audio/mpeg">
+        Votre navigateur ne prend pas en charge l'élément audio.
+      </audio>
+      <a></a><hr width="" size="4">
+      <h2>EFC : </h2>
+      <audio controls>
+        <source src="../son/EFC/EFC-" type="audio/mpeg">
         Votre navigateur ne prend pas en charge l'élément audio.
       </audio>
       <a></a><hr width="" size="4">
@@ -124,13 +136,25 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
+        <h2>EFC : </h2>
+        <audio controls>
+          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
       </center>
     </div>
     <div class="column4">
       <center>
-        <h2>EFC : oh-adrien</h2>
+        <h2>EFC : oh-adrien-enculer-va</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-oh_adrien_la2.mp3" type="audio/mpeg">
+          <source src="../son/EFC/EFC-oh-adrien-enculer.mp3" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>EFC : oh-adrien-gueule-dessu</h2>
+        <audio controls>
+          <source src="../son/EFC/EFC-oh-adrien-gueuler-dessu.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
@@ -158,9 +182,9 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : rien au code</h2>
+        <h2>EFC : </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-rien-au-code.mp3" type="audio/mpeg">
+          <source src="../son/EFC/EFC-" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
@@ -186,15 +210,21 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : enculer-de-belge</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-les-enculer-de-belge.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : coup-d'fourche</h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/EFC-j'te-fou-un-coup-de-fouche.mp3" type="audio/mpeg">
+          Votre navigateur ne prend pas en charge l'élément audio.
+        </audio>
+        <a></a><hr width="" size="4">
+        <h2>EFC : rien au code</h2>
+        <audio controls>
+          <source src="../son/EFC/EFC-rien-au-code.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
